--- a/sub/avm-eac_ruby_base1/spec/lib/avm/eac_ruby_base1/sources/base/bundler_spec_files/mygem/Rakefile
+++ b/sub/avm-eac_ruby_base1/spec/lib/avm/eac_ruby_base1/sources/base/bundler_spec_files/mygem/Rakefile
@@ -3,12 +3,12 @@
 begin
   require 'bundler/setup'
 rescue LoadError
-  puts 'You must `gem install bundler` and `bundle install` to run rake tasks'
+  puts 'You must `gem install bundler` and `bundle install` to run rake tasks' # rubocop:disable RSpec/Output
 end
 
 namespace :mygem do
   desc 'A stub task.'
   task :stub do # rubocop:disable Rails/RakeEnvironment
-    puts 'Stub!'
+    puts 'Stub!' # rubocop:disable RSpec/Output
   end
 end
