--- a/sub/avm-eac_ruby_base1/template/avm/eac_ruby_base1/source_generators/base/gemspec.template
+++ b/sub/avm-eac_ruby_base1/template/avm/eac_ruby_base1/source_generators/base/gemspec.template
@@ -11,7 +11,7 @@ Gem::Specification.new do |s|
   s.summary     = 'Put here de description.'
 
   s.files = %%gemspec_files_value%%
-  s.required_ruby_version = '>= 2.7'%%gemspec_extra%%
+  s.required_ruby_version = '%%require_ruby_version%%'%%gemspec_extra%%
 
 %%COMMON_DEPENDENCIES%%
 
